--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "buscador",
+  "homepage": "https://lluissf.github.io/buscador-cep",
+  "name": "buscador-cep",
   "version": "0.1.0",
-  "private": true,
+  "private": true,  
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
